--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,8 @@
 
 body {
     background-color: aqua; 
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 h1::before {
@@ -18,6 +20,18 @@ h1::after{
   content:url(/images/giphy.gif);
 }
 
+h1 {font-size: 3em;
+  line-height: 2em;
+  background-color: rgb(77, 243, 229);
+  text-align: center;
+  color:midnightblue
+}
+
+h2 {font-size: 1em;
+  background-color: rgb(77, 243, 229);
+  text-align: center;
+  color:midnightblue
+}
 
 aside {
     background-color:blanchedalmond;
@@ -25,16 +39,24 @@ aside {
     margin-left: 30px ;
     font-style: italic;
     font-family:Georgia, 'Times New Roman', Times, serif;
-}
+    border: 2px red solid;
+    border-radius:7px;
+  
+  }   
 
 aside:hover {
-background-color:darkseagreen;
+background-color:rgb(166, 255, 144);
 }
 
 
 p  {
-    color:rgb(182, 46, 152);
+    color:rgb(0, 0, 0);
     margin-inline: 30px ;
+}
+
+aside p {
+   color:blue;
+
 }
 
 nav{
@@ -84,6 +106,8 @@ nav ul li a {
 
 footer {
    margin-bottom: 10mm;
+   color:purple
+
     
 }
 input:focus {
@@ -109,9 +133,15 @@ a:hover {
 /*enlace seleccionado */
 a:active {
    color:sienna;
+   
 
 
+}
 
+.enlaces {
+  margin-bottom: 5mm;
+  background-color: wheat;
+  
 }
 
 .text1{
@@ -121,6 +151,9 @@ a:active {
     color: rgb(0, 0, 0);
     text-align: center;
     -webkit-text-size-adjust: inherit;
+    border: 1px solid black; width:100%;
+    background-color: rgb(32, 241, 207);
+    
   }
 
 
